# cli

./: .gitignore  Cargo.toml  Makefile  PROGRESS.md  README.md  api-versions.json
.github/workflows/: pipeline.yml
scripts/: demo-login-bridge.mjs  polish-video.mjs  render-tapes.sh
src/: api_common.rs  auth.rs  config.rs  lib.rs  record.rs  render.rs  resource.rs
src/backup/: mod.rs
src/commands/glow/: helpers.rs  mod.rs
src/deploy/: bluegreen.rs  compat.rs  compose.rs  config.rs  env.rs  healthcheck.rs  instance.rs  migrations.rs  mod.rs  preflight.rs  proxy_hints.rs  runtime.rs  wizard.rs
src/deploy/templates/: api-compose.yml  api-nginx.conf.template  api-upstreams.conf  api-upstreams.tmpl  client-compose.yml  client-nginx.conf.template
src/glow/: mod.rs  types.rs  ws.rs
src/glow/api/: latest.rs
tapes/: CANONICAL.md  _smoke-personas-search.tape  activity-export.tape  agents-generate.tape  attempts-complete.tape  attempts-start.tape  attempts-stop.tape  authentication-license-keys.tape  authentication-login.tape  authentication-service-account.tape  authentication-service-accounts.tape  backup-create.tape  backup-overview.tape  backup-restore.tape  backup-storage.tape  chat-export.tape  chat-live.tape  data-layer-bypass.tape  data-layer-cache.tape  data-layer-mvs.tape  documents-upload.tape  evals-run.tape  generation-trigger.tape  generation-wait.tape  group-lean-vs-detail.tape  group-media-downloads.tape  health-refresh.tape  home-export.tape  invocation-trace.tape  mcp-call.tape  mcp-list-tools.tape  mcp-overview.tape  permissions-context.tape  practice-export.tape  realtime-chat-live.tape  realtime-connect.tape  scenarios-generate.tape  settings-sections.tape  start-deploy.tape  start-init.tape  (+15 more)
tests/: cli_integration.rs
