[package]
name = "cli"
version = "1.0.8"
edition = "2021"
default-run = "glow"

# Library crate — both bins (glow, glw) in src/bin/ are thin wrappers around run().
[lib]
name = "glow"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
colored = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tabled = { version = "0.17", features = ["ansi"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5"
open = "5"

# Deploy module
dialoguer = { version = "0.11", features = ["password", "fuzzy-select"] }
indicatif = "0.17"
which = "6"
rand = "0.8"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
base64 = "0.22"

# WebSocket / socket.io client (Phase 5). Pure-Rust, no native deps —
# safe to add without the audio-libs gate the goal command specified.
# Voice (cpal/rodio) is deferred for explicit user go-ahead per the
# original constraint.
rust_socketio = "0.6"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
