[package]
name = "cli"
version = "1.0.23"
edition = "2021"
default-run = "glow"

# Library crate — both bins (glow, glw) in src/bin/ are thin wrappers around run().
[lib]
name = "glow"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
colored = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tabled = { version = "0.17", features = ["ansi"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5"
open = "5"
# Embed the VHS tapes into the binary so `glow record cli` has native
# access with no checkout (the polish script is include_str!'d directly).
include_dir = "0.7"

# Deploy module
dialoguer = { version = "0.11", features = ["password", "fuzzy-select"] }
indicatif = "0.17"
which = "6"
rand = "0.8"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
base64 = "0.22"

# WebSocket / socket.io client — backs the `glow attempts chat live`
# REPL. Pure-Rust, no native audio deps (CLI-side mic capture is out of
# scope; audio flows go through the HTTP chat_speak/chat_silence ops).
rust_socketio = "0.6"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
